VR: Close omnibox when the keyboard is explicitly dismissed

Usually, the keyboard disappears because the focus requiring it is lost.
But for the omnibox, if the keyboard is explicitly dismissed with the
on-keyboard button, and omnibox focus is lost, we should exit omnibox
edit mode.

BUG=842898
R=bshe

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I36ec30f3a6e430a5b412b680258463afca9b8c06
Reviewed-on: https://chromium-review.googlesource.com/1070528
Reviewed-by: Biao She <bshe@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561248}
Former-commit-id: 564be974ba354505d1fde671c95622aefeae5c87